--- a/.github/workflows/Login.yml
+++ b/.github/workflows/Login.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 */3 * *"  # 每三天运行一次，可以根据需求调整时间
 
 env:
   ACCOUNTS_JSON: ${{ secrets.ACCOUNTS_JSON }}
