--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -3,7 +3,7 @@ name: SSH Connect
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'  # 每天午夜执行，可以根据需要修改 cron 表达式
+    - cron: "0 0 */3 * *"  # 每三天运行一次，可以根据需求调整时间
 
 jobs:
   connect:
